# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: archetypes.json  talents.json  test-talents.json
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: hkl_sekvenssikaavio.md  koneen_sekvenssikaavio.md  monopoli.md
src/: config.py  index.py
src/entities/: archetype.py  character.py  talent.py
src/repositories/: archetype_repository.py  character_repository.py  talent_repository.py
src/services/: character_service.py
src/tests/: archetype_repository_test.py  character_test.py  talent_repository_test.py  test_helper.py
src/tests/entities/: character_test.py
src/tests/repositories/: archetype_repository_test.py  character_repository_test.py  talent_repository_test.py  test_character.json
src/tests/services/: character_service_test.py
src/tests/test_characters/: age_too_low.json  archetype_does_not_exist.json  attributes_missing_attribute.json  attributes_too_low_value.json  attributes_too_many_points_in_main_attribute.json  attributes_too_many_points_in_non_main_attribute.json  attributes_too_many_points_used.json  equipment_items_not_available_for_archetype.json  equipment_too_few_items.json  (+21 more)
src/ui/: character_creation_view.py  character_sheet_view.py  command_line_ui.py  main_view.py  ui.py
vaesen-character-app/dokumentaatio/: vaatimusmaarittely.md
(+8 files in other folders)
